RHD-22 Created Product learn page

--- a/get-started.adoc
+++ b/get-started.adoc
@@ -6,7 +6,7 @@
 
 == Learning Materials
 
-=== link:../developer-materials[Developer Materials]
+=== link:../developer-materials[Learn]
 
 See all quickstarts, demos, videos, and other materials we provide for developers to get coding quickly.
 
