RHD-22 Created Product learn page

--- a/products/brms/get-started.adoc
+++ b/products/brms/get-started.adoc
@@ -72,9 +72,9 @@ _How about some background articles on JBoss BRMS?_ +
 Browse the following resources that will start you off with implementations that are automated, repeatable, and easy to use in a demo format that will have you up and running in minutes with JBoss BRMS.
 They will provide you with in depth articles that guide your decisions and videos that make it all as easy as can be to follow along and learn the BPM skills you need.
 
-* link:../developer-materials/#!hidden_keyword=JBoss%20BRMS[Developer materials for JBoss BRMS]
+* link:../learn/#!hidden_keyword=JBoss%20BRMS[Developer materials for JBoss BRMS]
 * http://www.schabell.org/search/label/Tips%26Tricks[JBoss BRMS tips and tricks]
-* link:../developer-materials/#!formats=video&projectCode=brms[JBoss BRMS videos]
+* link:../learn/#!formats=video&projectCode=brms[JBoss BRMS videos]
 * link:../overview/#buzz[Catch all the Buzz around JBoss BRMS]
 
 We hope this page will help you accelerate your JBoss BRMS experience!
